--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
         </div>
 
         <div class="project-card">
-            <img src="warna.jpeg" alt="Projek 3" />
+            <img src="gundam.jpeg" alt="Projek 3" />
             <div>
                 <h3>Projek 3</h3>
-                <p>Belajar cara menambahkan warna dan gradiasi dalam halaman web.</p>
+                <p>Merakit gundam.</p>
             </div>
         </div>
     </section>
@@ -77,3 +77,4 @@
 
 </body>
 </html>
+
